Modify styling to put role of mobile header/footer padding onto page container. Fix overflow-x bug in section pages.

--- a/styles/style.css
+++ b/styles/style.css
@@ -527,15 +527,24 @@ file. These definitions will be defined mobile first.
 /* section */
 .page {
     margin: 0;
+    padding: 56px 0;
     font-family: sans-serif;
     background: #717171;
 }
 
+@media (min-width:480px) {
+    .page {
+        padding: 56px 0 0;
+    }
+}
+
 @media (min-width:900px) {
     .page {
+        width: 100vw;
         height: 100vh;
         display: flex;
         flex-direction: column;
+        padding: 0;
     }
 }
 
@@ -544,7 +553,8 @@ file. These definitions will be defined mobile first.
         flex: 1;
         min-height: 0;
         position: relative;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
 }
 
@@ -840,10 +850,12 @@ file. These definitions will be defined mobile first.
 /* main-non-text-container */
 .main-non-text-container {
     position: fixed;
+    top: 0;
+    left: 0;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding: 56px 0.6em;
+    padding: 56px 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -851,17 +863,12 @@ file. These definitions will be defined mobile first.
 
 @media (min-width: 900px) {
     .main-non-text-container {
-        /* Reset inherited styles */
-        height: initial;
-        padding: initial;
-
         position: absolute;
-        top: 0;
         right: 62%;
         bottom: 0;
-        left: 0;
         margin: auto;
         width: 62%;
+        padding: 0;
         transition: width 1s, right 1s;
     }
 }
@@ -1374,6 +1381,10 @@ file. These definitions will be defined mobile first.
 }
 
 /* section-text */
+.section-text {
+    position: relative;
+}
+
 @media (min-width:900px) {
     .section-text {
         position: absolute;
@@ -1455,15 +1466,9 @@ file. These definitions will be defined mobile first.
     min-height: calc(100vh - 112px);
     display: flex;
     flex-direction: column;
-    padding: 72px 0;
+    padding: 16px 0;
     font-size: 1rem;
     background: #363636;
-}
-
-@media (min-width:480px) {
-    .section-text__main-container {
-        padding: 72px 0 16px 0;
-    }
 }
 
 @media (min-width:900px) {
@@ -1545,7 +1550,7 @@ file. These definitions will be defined mobile first.
 
 .section-text__toggle-narration-btn {
     position: absolute;
-    top: 4.5em;
+    top: 1.14em;
     right: 1em;
     box-sizing: border-box;
     width: 2.5em;
